--- a/app/assets/stylesheets/components/_title_page_top.scss
+++ b/app/assets/stylesheets/components/_title_page_top.scss
@@ -1,5 +1,5 @@
 .banderolle-img-background {
-  background-image: url('fond3.jpg');
+  background-image: url(asset-path('fond3.jpg'));
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
@@ -11,7 +11,7 @@
   margin-top: 50px;
 }
 
-h1 {
+.title-page {
   font-size: 54px;
   color: white;
   font-weight: bold;
