gestion dynamique title page

--- a/app/views/shared/_title_page_top.html.erb
+++ b/app/views/shared/_title_page_top.html.erb
@@ -1,10 +1,3 @@
     <div class="banderolle-img-background">
-      <h1 class="title-page">TITLE</h1>
-    </div>
-    <div class="font vh-100">
-      <div class="row h-100">
-        <div class="content-site col-md-10 offset-md-1">
-
-        </div>
-      </div>
+      <h1 class="title-page"><%= yield :title %></h1>
     </div>
