--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-  <%= render "shared/title_page_top" %>
-  <%= render "shared/flashes" %>
+  <body>
+    <%= render "shared/navbar" %>
+    <%= render "shared/title_page_top" %>
+    <%= render "shared/flashes" %>
 
-    <%= yield %>
+      <%= yield %>
   </body>
 </html>
