MAJ title et navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,8 +2,11 @@
     <div class="list-link-navbar">
         <ul class="ul-navbar">
             <li class="list-navbar"><a class="link-navbar" href="#home">Accueil</a></li>
-            <li class="list-navbar"><a class="link-navbar" href="#news">Tutos</a></li>
-            <li class="list-navbar"><a class="link-navbar" href="#contact">Mes personnages</a></li>
+            <li class="list-navbar"><a class="link-navbar" href="#news">Tutoriels</a></li>
+            <li class="list-navbar"><a class="link-navbar" href="#contact">Lexique</a></li>
+            <li class="list-navbar"><a class="link-navbar" href="#contact">Univers</a></li>
+            <li class="list-navbar"><a class="link-navbar" href="#contact">Créer personnage</a></li>
+            <li class="list-navbar"><a class="link-navbar" href="#contact">Tableau de bord</a></li>
         </ul>
     </div>
     <div class="div-avatar-pseudo">
