--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="list-link-navbar">
         <ul class="ul-navbar">
             <li class="list-navbar"><a class="link-navbar" href="#home">Accueil</a></li>
-            <li class="list-navbar"><a class="link-navbar" href="#news">Tutoriels</a></li>
+            <li class="list-navbar"><a class="link-navbar" href="#Tutorials">Tutoriels</a></li>
             <li class="list-navbar"><a class="link-navbar" href="#contact">Lexique</a></li>
             <li class="list-navbar"><a class="link-navbar" href="#contact">Univers</a></li>
             <li class="list-navbar"><a class="link-navbar" href="#contact">Créer personnage</a></li>
