--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,10 +2,18 @@
   Lexique du JDR
 <% end %>
 
-<ul>
-  <% @posts.each do |post| %>
-    <li>
-      <%= link_to post.title, post_path(post) %>
-    </li>
-  <% end %>
-</ul>
+<div class="lexique-container">
+  <div class="sections">
+    <h2>Sections</h2>
+    <ul>
+      <% @posts.each do |post| %>
+        <li>
+          <%= link_to post.title, post_path(post) %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="content">
+    <h2>Sélectionnez une section pour voir les explications</h2>
+  </div>
+</div>
