modif du ttire H2

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class="lexique-container">
   <div class="sections">
-    <h2>Sections</h2>
+    <h2>Lexique</h2>
     <ul>
       <% @posts.each do |post| %>
         <li>
