MAJ des view et show de l'index

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,6 +14,6 @@
     </ul>
   </div>
   <div class="content">
-    <h2>Sélectionnez une section pour voir les explications</h2>
+    <h2>Sélectionnez un mot du lexique pour voir les explications</h2>
   </div>
 </div>
