--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,7 +3,7 @@
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
-$yellow: #FFC65A;
+$yellow: rgb(253, 218, 17);
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
