Creation des views index et new de characters

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
             <li class="list-navbar"><a class="link-navbar" href="#news">Tutoriels</a></li>
             <li class="list-navbar"><a class="link-navbar" href="#contact">Lexique</a></li>
             <li class="list-navbar"><a class="link-navbar" href="#contact">Univers</a></li>
-            <li class="list-navbar"><a class="link-navbar" href="#contact">Créer personnage</a></li>
+            <li class="list-navbar"><a class="link-navbar" href="characters">Créer personnage</a></li>
             <li class="list-navbar"><a class="link-navbar" href="#contact">Tableau de bord</a></li>
         </ul>
     </div>
