MAJ des classes pour le lexique

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,7 +13,7 @@
       <% end %>
     </ul>
   </div>
-  <div class="content">
+  <div class="lexique-content">
     <h2>Sélectionnez un mot du lexique pour voir les explications</h2>
   </div>
 </div>
