--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
       <% end %>
     </ul>
   </div>
-  <div class="content">
+  <div class="lexique-content">
     <h2><%= @post.title %></h2>
     <p><%= @post.content %></p>
   </div>
