--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,23 +1,27 @@
-.button {
-  background: linear-gradient(to top, #808080, #a8a8a8);
-  color: rgb(255, 224, 51);
+button {
+  background:#6b6b6b;
+  color: rgb(255, 255, 255);
   letter-spacing: 1px;
-  padding: 10px 20px;
+  padding: 5px 15px;
   text-align: center;
   text-decoration: none;
   border-style: none;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 24px;
   cursor: pointer;
-  border-color: rgb(70, 70, 70);
+  border: 4px double rgb(255,222,35);
   font-family: 'Cinzel', serif;
   margin: 10px;
-  transition-duration: 1s;
+  transition-duration: 0.5s;
+  box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
+-webkit-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
+-moz-box-shadow: 15px 13px 16px -5px rgba(171,171,171,0.94);
+  border-radius: 5px;
 }
 
-.button:hover {
-  background: linear-gradient(to top, #a8a8a8, #808080);
+button:hover {
+  background: #808080;
   text-decoration: none;
-  color: yellow;
+  color: rgb(255,222,35);
   text-shadow: none;
 }
