modif du model character

--- a/app/assets/stylesheets/components/_title_page_top.scss
+++ b/app/assets/stylesheets/components/_title_page_top.scss
@@ -1,5 +1,5 @@
 .banderolle-img-background {
-  background-image: url(asset-path('fond3.jpg'));
+  background-image: url(asset-path('fond3_1.jpg'));
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
