creation de universes index

--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Bienvenue sur la création de ton personnage</h1>
 <p>Nous allons t'accompagner à travers la création de ton personnage</p>
 <p>Pour commencer, il te faut choisir l'univers de jeux dans lequel tu veux vivre ton aventure</p>
-<p>#mettre un bouton "Plonger dans les differents univers"</p>
+<%= link_to "Plonger dans les differents univers", link_path %>
+<button class="button" link_to>Plonger dans les differents univers</button>
