MAJ du bouton Creer un personnage

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
             <li class="list-navbar"><%= link_to 'Tutoriels', tutorials_path, class: 'link-navbar' %></li>
             <li class="list-navbar"><%= link_to 'Lexique', posts_path, class: 'link-navbar' %></li>
             <li class="list-navbar"><%= link_to 'Univers', universes_path, class: 'link-navbar' %></li>
-            <li class="list-navbar"><%= link_to 'Créer mon personnage', characters_path, class: 'link-navbar' %></li>
+            <li class="list-navbar"><%= link_to 'Créer mon personnage', universes_path, class: 'link-navbar' %></li>
             <li class="list-navbar"><a class="link-navbar" href="#contact">Tableau de bord</a></li>
         </ul>
     </div>
