Hero-banner  home page

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -32,7 +32,7 @@
 
 .navbar-site {
   box-shadow: 0px 2px 6px 0px rgba(29, 29, 29, 0.85);
-  position: fixed;
+  position: sticky;
   width: 100%;
   top: 0;
   z-index: 100;
