--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,3 @@
-<% content_for :title do %>
-  Hello
-<% end %>
-
+<div class="hero-banner" style="background-image:url(<%= image_path "Hero_banner.png" %>)">
+<h2 class="btn-cta">L'Aventure n'attends que toi!</h2>
+</div>
