--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -8,9 +8,8 @@
   <div class="cards_univer">
     <div>
       <h2>Donjons et Dragons D&D</h2>
-      <h3>petite description accrocheur</h3>
-      <p>taux de completion</p>
-      <p>#mettre un boutton vers les tutos de l'univers</p>
+      <p>Donjons et Dragons, souvent abrégé en D&D, est le tout premier jeu de rôle sur table de genre médiéval-fantastique.</p>
+      <button>Découvir</button>
     </div>
     <div>
       <p>#mettre une image de l'univers</p>
@@ -23,18 +22,16 @@
     </div>
     <div>
       <h2>Runequest</h2>
-      <h3>petite description accrocheur</h3>
-      <p>taux de completion</p>
-      <p>#mettre un boutton vers les tutos de l'univers</p>
+      <p>Dans RuneQuest laisser les dieux exprimer leurs pouvoirs a travers vous</p>
+      <button>Découvir</button>
     </div>
   </div>
 
   <div class="cards_univer">
     <div>
       <h2>L'appel de Chtullu</h2>
-      <h3>petite description accrocheur</h3>
-      <p>taux de completion</p>
-      <p>#mettre un boutton vers les tutos de l'univers</p>
+      <p>L'Appel de Cthulhu est un jeu de rôle de la nouvelle du même nom écrite par l'écrivain fantastique américain H. P. Lovecraft. </p>
+      <button>Découvir</button>
     </div>
     <div>
       <p>#mettre une image de l'univers</p>
