image home comme il faut

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,8 +1,8 @@
 // Specific CSS for your home-page
 .hero-banner {
-  background-size: cover;
+  background-size: contain;
   background-position: top;
-  height: calc(100vh - 52px);
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: flex-end;
