--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,6 +1,7 @@
 // Specific CSS for your home-page
 .hero-banner {
   background-size: contain;
+  background-repeat: no-repeat;
   background-position: top;
   height: 100vh;
   display: flex;
