--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,6 @@
 // Specific CSS for your home-page
 .hero-banner {
-  background-size: contain;
-  background-repeat: no-repeat;
+  background-size: content;
   background-position: top;
   height: 100vh;
   display: flex;
