ajouter des boutons

--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -14,3 +14,8 @@
 <% else %>
   <p>Aucun tutoriel disponible pour cet univers.</p>
 <% end %>
+
+<div class="button-container">
+  <%= link_to 'Choisir un autre univers', universes_path, class: 'btn btn-secondary' %>
+  <%= link_to 'Continuer dans cet univers', new_character_path(universe_id: @universe.id), class: 'btn btn-primary' %>
+</div>
