MAJ du controller

--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -17,5 +17,5 @@
 
 <div class="button-container">
   <%= link_to 'Choisir un autre univers', universes_path, class: 'btn btn-secondary' %>
-  <%= link_to 'Continuer dans cet univers', new_character_path(universe_id: @universe.id), class: 'btn btn-primary' %>
+  <%= link_to 'Continuer dans cet univers', new_character_path(universe_id: @universe.id), class: 'button' %>
 </div>
