--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,17 +1,122 @@
 // Specific CSS for your home-page
 .hero-banner {
-  background-size: content;
+  background-size: cover;
   background-position: top;
-  height: 100vh;
+ height: 100vh;
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  padding-bottom: 100px;
 }
 
-.btn-cta {
+
+.btn-cta{
+ padding: 9px;
+  text-align: center;
+  width:344px;
+  height:45px;
+  background: rgba(0, 0, 0, 0.616);
+  border-style: none;
+  color:rgba(255, 255, 0, 0.712);
+  font-size: 19px;
+  letter-spacing: 3px;
+  font-family: 'Lato';
+  font-weight: 600;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  transition: all .5s;
+  box-shadow: 0px 1px 2px rgba(0,0,0,.2);
+}
+.btn-cta span{
   position: absolute;
-  margin-bottom: 30px;
-  background-color: rgba(0, 0, 0, 0.329);
-  border-radius: 5px;
-  color: yellow;
+  display: block;
+}
+.btn-cta span:nth-child(1){
+  height: 3px;
+  width:344px;
+  top:0px;
+  left:-344px;
+  background: linear-gradient(to right, rgba(0,0,0,0), #f6e58d);
+  border-top-right-radius: 1px;
+  border-bottom-right-radius: 1px;
+  animation: span1 3s linear infinite;
+  animation-delay: 0s;
+}
+
+@keyframes span1{
+  0%{
+      left:-344px
+  }
+  100%{
+      left:344px;
+  }
+}
+.btn-cta span:nth-child(2){
+  height: 70px;
+  width: 3px;
+  top:-70px;
+  right:0px;
+  background: linear-gradient(to bottom, rgba(0,0,0,0), #f6e58d);
+  border-bottom-left-radius: 1px;
+  border-bottom-right-radius: 1px;
+  animation: span2 2s linear infinite;
+  animation-delay: 3s;
+}
+@keyframes span2{
+  0%{
+      top:-70px;
+  }
+  100%{
+      top:70px;
+  }
+}
+.btn-cta span:nth-child(3){
+  height:3px;
+  width: 344px;;
+  right: -344px;;
+  bottom: 0px;
+  background: linear-gradient(to left, rgba(0,0,0,0), #f6e58d);
+  border-top-left-radius: 1px;
+  border-bottom-left-radius: 1px;
+  animation: span3 3s linear infinite;
+  animation-delay: 6s;
+}
+@keyframes span3{
+  0%{
+      right: -344px;;
+  }
+  100%{
+      right: 344px;
+  }
+}
+
+.btn-cta span:nth-child(4){
+  height:70px;
+  width:3px;
+  bottom:-70px;
+  left:0px;
+  background: linear-gradient(to top, rgba(0,0,0,0), #f6e58d);
+  border-top-right-radius: 1px;
+  border-top-left-radius: 1px;
+  animation: span4 2s linear infinite;
+  animation-delay: 9s;
+}
+@keyframes span4{
+  0%{
+      bottom: -70px;
+  }
+  100%{
+      bottom:70px;
+  }
+}
+
+.btn-cta:hover{
+  transition: all .5s;
+  transform: rotate(-3deg) scale(1.1);
+  box-shadow: 0px 3px 5px rgba(0,0,0,.4);
+}
+.btn-cta:hover span{
+  animation-play-state: paused;
 }
