--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,11 @@
 <div class="hero-banner" style="background-image:url(<%= image_path "Hero_banner.png" %>)">
-<h2 class="btn-cta">L'Aventure n'attends que toi!</h2>
+  <%= link_to universes_path, style: "text-decoration: none;" do %>
+    <div class="btn-cta">
+    L'Aventure n'attends que toi!
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    </div>
+  <% end %>
 </div>
