MAJ de le création d'un perso

--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -1,1 +1,8 @@
-<h1>video tuto+presentation des races</h1>
+<h1> Etape 2 du Tuto </h1>
+
+<p>Ce character a été créé dans l'univers : <%= @character.universe.name %></p>
+<p>Ce character appartient à : <%= @character.user.pseudo %></p>
+<p>ID de ton character : <%= @character.id %></p>
+<p>Date de création : <%= @character.created_at.strftime("%d/%m/%Y %H:%M") %></p>
+
+<h2>presentation des races</h2>
