--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -20,6 +20,7 @@
         <th>Constitution</th>
         <th>Wisdom</th>
         <th>Charisma</th>
+        <th>Mis à jour le</th>
         <th>Actions</th>
       </tr>
     </thead>
@@ -38,6 +39,7 @@
           <td><%= character.constitution.presence || 'Non défini' %></td>
           <td><%= character.wisdom.presence || 'Non défini' %></td>
           <td><%= character.charisma.presence || 'Non défini' %></td>
+          <td><%= character.updated_at.in_time_zone('Paris').strftime("%d/%m/%Y %H:%M") %></td>
           <td>
             <%= link_to 'Show', character_path(character) %>
             <%= link_to 'Edit', edit_character_path(character) %>
