--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,12 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "button";
+@import "card_character";
+@import "characters";
+@import "content-site";
 @import "form_legend_clear";
+@import "lexique";
 @import "navbar";
 @import "title_page_top";
-@import "card_character";
+
