image dans universes

--- a/app/views/universes/index.html.erb
+++ b/app/views/universes/index.html.erb
@@ -2,7 +2,7 @@
   <h1>Les Univers</h1>
   <p>Choisi ici l'univers qui te plait</p>
 </div>
-
+<h1>#redimensionner les images pour qu'elles fit dans la div</h1>
 <div class="cards_univers">
 
   <div class="cards_univer">
@@ -12,13 +12,13 @@
       <button>Découvir</button>
     </div>
     <div>
-      <p>#mettre une image de l'univers</p>
+      <%= image_tag "dnd.jpg", alt: "image dnd" %>
     </div>
   </div>
 
   <div class="cards_univer">
     <div>
-      <p>#mettre une image de l'univers</p>
+      <%= image_tag "runequest.jpg", alt: "image runequest" %>
     </div>
     <div>
       <h2>Runequest</h2>
@@ -34,7 +34,7 @@
       <button>Découvir</button>
     </div>
     <div>
-      <p>#mettre une image de l'univers</p>
+      <%= image_tag "chtullu.jpg", alt: "image chtullu" %>
     </div>
   </div>
 </div>
