modif de la show

--- a/app/views/universes/show.html.erb
+++ b/app/views/universes/show.html.erb
@@ -1,6 +1,4 @@
-<h1><%= @universe.name %></h1>
-<p><%= @universe.description %></p>
-
+<h1>Bienvenue dans l'univers <%= @universe.name %></h1>
 <% if @tutorial %>
   <div class="tutorial">
     <h2><%= @tutorial.title %></h2>
