--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -1,6 +1,5 @@
-if completion_rate == xx 
-alors tu affiches le input xxx
-avec le simple form for qui va bien. 
+J'ai besoin d'un simple form for qui va bien pour pouvoir éditer mon character par etape. 
+
 
 tant que le completion_rate n'est pas égal à xx, tu affiches le completion_rate et le bouton suivant et tu renvoies l'édit. 
 Ensuite tu peux envoyer sur la show de mon character. 
@@ -14,3 +13,6 @@ Ensuite tu peux envoyer sur la show de mon character.
     <% end %>
     <%= f.submit "next step"%>    
 <% end %>
+
+Le completion_rate varie de 0 à 9.
+est-ce que tu peux afficher un taux d'avancement sur 100% ? 
