--- a/app/views/characters/edit.html.erb
+++ b/app/views/characters/edit.html.erb
@@ -10,9 +10,35 @@
   <%= simple_form_for @character do |f| %>
     <% case @character.completion_rate %>
     <% when 1 %>
-      <%= f.input :race_id, collection: @character.universe.races, as: :radio_buttons, label: 'Choisissez une race' %>
+      <div class="options-wrapper">
+        <% @character.universe.races.each do |race| %>
+          <div class="option-item">
+            <%= f.radio_button :race_id, race.id %>
+            <label for="<%= f.object_name %>_race_id_<%= race.id %>">
+              <%= image_tag race.photo, alt: race.name %>
+              <div>
+                <strong><%= race.name %></strong>
+                <div class="description"><%= race.description %></div>
+              </div>
+            </label>
+          </div>
+        <% end %>
+      </div>
     <% when 2 %>
-      <%= f.input :univers_class_id, collection: @character.universe.univers_classes, as: :radio_buttons, label: 'Choisissez une classe' %>
+      <div class="options-wrapper">
+        <% @character.universe.univers_classes.each do |univers_class| %>
+          <div class="option-item">
+            <%= f.radio_button :univers_class_id, univers_class.id %>
+            <label for="<%= f.object_name %>_univers_class_id_<%= univers_class.id %>">
+              <%= image_tag univers_class.photo, alt: univers_class.name %>
+              <div>
+                <strong><%= univers_class.name %></strong>
+                <div class="description"><%= univers_class.description %></div>
+              </div>
+            </label>
+          </div>
+        <% end %>
+      </div>
     <% when 3 %>
       <%= f.input :strength, as: :select, collection: (10..18).to_a, label: 'Force' %>
     <% when 4 %>
