--- a/app/assets/stylesheets/characters/_show.scss
+++ b/app/assets/stylesheets/characters/_show.scss
@@ -1,7 +1,92 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 100vh;
+.character-show {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f4f4f4;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  font-family: 'Cinzel', serif;
+
+  h1 {
+    font-size: 36px;
+    color: #333;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .character-overview {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+
+    .character-image {
+      flex: 0 0 200px;
+      img {
+        border-radius: 50%;
+        border: 5px solid #6b6b6b;
+      }
+    }
+
+    .character-details {
+      flex: 1;
+      margin-left: 20px;
+      
+      h2 {
+        font-size: 28px;
+        color: #555;
+        margin-bottom: 10px;
+      }
+
+      p {
+        font-size: 16px;
+        color: #666;
+      }
+    }
+  }
+
+  .character-stats {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+
+    h3 {
+      font-size: 24px;
+      color: #444;
+      margin-bottom: 10px;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      
+      li {
+        font-size: 18px;
+        margin-bottom: 5px;
+
+        strong {
+          color: #333;
+        }
+      }
+    }
+  }
+
+  .character-backstory {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    h3 {
+      font-size: 24px;
+      color: #444;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 16px;
+      color: #666;
+    }
+  }
 }
